native-objects/awesome-api-a-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awesome-api-a
  labels:
    app.kubernetes.io/name: awesome-api-a
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: awesome-api-a
  template:
    metadata:
      labels:
        app.kubernetes.io/name: awesome-api-a
    spec:
      containers:
        - name: awesome-api-a
          image: quay.io/awesome-api-a:3.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
