native-objects/awesome-api-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awesome-api-a
  labels:
    app.kubernetes.io/name: awesome-api-a
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: awesome-api-a
